# banking-transactions

./: README.md  banking-transactions.cabal  stack.yaml  transactions.csv
app/: Main.hs
