name: banking-transactions
version: 0.1
homepage: https://github.com/andrewthad/banking-transactions#readme
license: BSD3
license-file: LICENSE
author: Andrew Martin
maintainer: andrew.thaddeus@gmail.com
copyright: 2017 Andrew Martin
category: software
build-type: Simple
extra-source-files: README.md
cabal-version: >=1.10

executable banking-transactions
  hs-source-dirs: app
  main-is: Main.hs
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , streaming
    , streaming-bytestring
    , siphon
    , bytestring
    , colonnade
    , transformers
    , containers
    , foldl
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/andrewthad/banking-transactions
